# CoreProtectBDS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CoreProtect.sln  README.md
CoreProtect/: CoreProtect.vcxproj  CoreProtect.vcxproj.filters  dllmain.cpp  pch.h  plugin.cpp  resource.h  resource.rc
CoreProtect/config/: config.cpp  config.h
CoreProtect/database/: database.cpp  database.h
CoreProtect/utility/: utility.cpp  utility.h
SDK/Lib/: yaml-cpp.lib
config/: config.yml
include/: pch.h
include/language/: language.h  phrase.h  selector.h
include/utility/: chat_message.h  color.h  util.h
lang/: de.json  es.json  uk.json
langs/: en.json  fr.json  ja.json  pl.json  ru.json  tr.json  vi.json  zh-cn.json  zh-tw.json
source/: dllmain.cpp
source/language/: language.cpp  phrase.cpp  selector.cpp
source/utility/: chat_message.cpp  color.cpp  util.cpp
tests/: main.hpp
